--- a/style.css
+++ b/style.css
@@ -255,3 +255,136 @@ input[type=submit]:hover {
 textarea {
 	height: 198px;
 }
+
+/* media queries for 980, 640, and 768 screen widths */
+@media screen and (max-width: 980px) {
+	#header_block {
+		width: 718px;
+	}
+
+	#main_block {
+		width: 718px;
+	}
+
+	section {
+		width: 350px;
+	}
+
+	#displaypic {
+		width: 350px;
+		margin: 10px auto 16px auto;
+		float: none;
+	}
+
+	.portfolio_pic, .portfolio_pic img {
+		width: 100%;
+		max-width: 410px;
+		height: 100%
+		max-height: 306px;
+	}
+}
+
+@media screen and (max-width: 768px) {
+	#header_block {
+		width: 100%;
+		max-width: 665px;
+	}
+
+	#main_block {
+		width: 100%;
+		max-width: 665px;
+		flex-wrap: wrap;
+	}
+
+	section {
+		width: 100%;
+		margin-bottom: 38px;
+	}
+
+	aside {
+		width: 100%;
+	}
+
+	#social_images {
+		justify-content: flex-start;
+	}
+
+	#social_images img {
+		margin-right: 10px;
+	}
+
+	#displaypic {
+		width: 100%;
+		margin: 10px auto 16px auto;
+		float: none;
+	}
+
+	.portfolio_pic, .portfolio_pic img {
+		width: 275px;
+		height: 205px;
+	}
+}
+
+@media screen and (max-width: 640px) {
+	#header_block {
+		width: 100%;
+		height: 122px;
+
+		display: block;
+	}
+
+	#headernameblock {
+		width: 100%;
+		height: 70px;
+	}
+
+	nav {
+		height: 52px;
+
+		display: flex;
+		flex-direction: row;
+		justify-content: space-between;
+	}
+
+	.nav_link {
+		width: 33.3%;
+		margin: 0 auto;
+		padding: 0;
+	}
+
+	#main_block {
+		width: 100%;
+		max-width: 472px;
+		flex-wrap: wrap;
+	}
+
+	section {
+		width: 100%;
+		margin-bottom: 38px;
+	}
+
+	aside {
+		width: 100%;
+	}
+
+	#social_images {
+		justify-content: flex-start;
+	}
+
+	#social_images img {
+		margin-right: 10px;
+	}
+
+	#displaypic {
+		width: 100%;
+		margin: 10px auto 16px auto;
+		float: none;
+	}
+
+	.portfolio_pic, .portfolio_pic img {
+		width: 100%;
+		max-width: 410px;
+		height: 100%;
+		max-height: 306px;
+	}
+}
