Added responsive directory
fixed css files

--- a/style.css
+++ b/style.css
@@ -282,6 +282,11 @@ textarea {
 		height: 100%
 		max-height: 306px;
 	}
+	
+	input
+	{
+	width: 100%;
+	}
 }
 
 @media screen and (max-width: 768px) {
@@ -314,7 +319,7 @@ textarea {
 	}
 
 	#displaypic {
-		width: 300px;
+		width: 100%;
 		margin: 10px auto 16px auto;
 		float: none;
 	}
@@ -322,6 +327,11 @@ textarea {
 	.portfolio_pic, .portfolio_pic img {
 		width: 275px;
 		height: 205px;
+	}
+	
+	input
+	{
+	width: 100%;
 	}
 }
 
@@ -386,5 +396,10 @@ textarea {
 		max-width: 410px;
 		height: 100%;
 		max-height: 306px;
+	}
+	
+	input
+	{
+	width: 100%;
 	}
 }
